- Добавил в swagger путь до ping - Добавил теги в структуры запросов - Написал тесты - Рефакторинг - Создал мок репозитория для использования в тестах -
