# docs/swagger.json
@@ -12,6 +12,25 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/ping": {
+            "get": {
+                "produces": [
+                    "text/html"
+                ],
+                "tags": [
+                    "ping"
+                ],
+                "summary": "Проверка соединения",
+                "responses": {
+                    "200": {
+                        "description": "pong",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "post": {
                 "consumes": [
