# internal/api/handler.go
@@ -2,7 +2,9 @@ package api
 
 import (
 	"api_server/internal/service"
+	"errors"
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	"net/http"
 	"strconv"
 )
@@ -13,12 +15,12 @@ type Handler struct {
 
 type UpdateUserRequest struct {
 	Name string `json:"name"`
-	Age  int    `json:"age"`
+	Age  int    `json:"age" validate:"min=14"`
 }
 
 type CreateUserRequest struct {
-	Name string `json:"name"`
-	Age  int    `json:"age"`
+	Name string `json:"name" validate:"required"`
+	Age  int    `json:"age" validate:"required,min=14"`
 }
 
 type ErrorResponse struct {
@@ -33,7 +35,13 @@ func NewHandler(s *service.UserService) *Handler {
 	return &Handler{userService: s}
 }
 
-func (h *Handler) PingHandler(c *gin.Context) {
+// Ping godoc
+// @Summary      Проверка соединения
+// @Tags         ping
+// @Produce      html
+// @Success      200 {string}  string    "ok"
+// @Router       /ping [get]
+func (h *Handler) Ping(c *gin.Context) {
 	c.String(200, "pong")
 }
 
@@ -48,20 +56,15 @@ func (h *Handler) PingHandler(c *gin.Context) {
 // @Failure      404  {object}  ErrorResponse
 // @Router       /user/{id} [get]
 func (h *Handler) GetUser(c *gin.Context) {
-	idStr := c.Param("id")
-	id, err := strconv.Atoi(idStr)
+	id, err := h.ParseUserId(c.Param("id"))
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
 	user, err := h.userService.GetUserByID(id)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	if user == nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
+	if err != nil && errors.Is(err, service.ErrNotFound) {
+		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, user)
@@ -74,21 +77,25 @@ func (h *Handler) GetUser(c *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Param        request   body      CreateUserRequest  true  "JSON"
-// @Success      200       {object}  domain.User
+// @Success      201       {object}  domain.User
 // @Failure      400       {object}  ErrorResponse
 // @Failure      500       {object}  ErrorResponse
-// @Failure      404       {object}  ErrorResponse
 // @Router       /user [post]
 func (h *Handler) CreateUser(c *gin.Context) {
 	var request CreateUserRequest
 	if err := c.ShouldBindJSON(&request); err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+	}
+	validate := validator.New()
+	if err := validate.Struct(request); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
 	}
 	u, err := h.userService.CreateUser(request.Name, request.Age)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 	}
-	c.JSON(http.StatusOK, u)
+	c.JSON(http.StatusCreated, u)
 }
 
 // UpdateUser godoc
@@ -104,8 +111,7 @@ func (h *Handler) CreateUser(c *gin.Context) {
 // @Failure      404       {object}  ErrorResponse
 // @Router       /user/{id} [patch]
 func (h *Handler) UpdateUser(c *gin.Context) {
-	idStr := c.Param("id")
-	id, err := strconv.Atoi(idStr)
+	id, err := h.ParseUserId(c.Param("id"))
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -118,16 +124,22 @@ func (h *Handler) UpdateUser(c *gin.Context) {
 	}
 
 	user, err := h.userService.GetUserByID(id)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	if user == nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
+	if err != nil && errors.Is(err, service.ErrNotFound) {
+		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
 		return
 	}
 
-	updatedUser, err := h.userService.UpdateUser(user.ID, request.Name, request.Age)
+	userName := user.Name
+	if request.Name != userName && request.Name != "" {
+		userName = request.Name
+	}
+
+	userAge := user.Age
+	if request.Age != userAge && request.Age > 14 {
+		userAge = request.Age
+	}
+
+	updatedUser, err := h.userService.UpdateUser(user.ID, userName, userAge)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -148,8 +160,7 @@ func (h *Handler) UpdateUser(c *gin.Context) {
 // @Failure      404       {object}  ErrorResponse
 // @Router       /user/{id} [delete]
 func (h *Handler) DeleteUser(c *gin.Context) {
-	idStr := c.Param("id")
-	id, err := strconv.Atoi(idStr)
+	id, err := h.ParseUserId(c.Param("id"))
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -180,4 +191,13 @@ func (h *Handler) DeleteUser(c *gin.Context) {
 func (h *Handler) GetUsers(c *gin.Context) {
 	users := h.userService.GetUsers()
 	c.JSON(http.StatusOK, users)
+}
+
+func (h *Handler) ParseUserId(idStr string) (int, error) {
+	id, err := strconv.Atoi(idStr)
+	if err != nil {
+		return 0, err
+	}
+
+	return id, nil
 }
